# qa-automation-practice

./: Dockerfile  pyproject.toml
