[tool.poetry]
name = "qa-automation-practice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.4.2"
requests = "^2.32.5"
pydantic = "^2.11.9"


[tool.poetry.group.dev.dependencies]
allure-pytest = "^2.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
